src/objects/Site_Survey__c.object
<CustomObject>
    <description>Property/site survey for Facilities</description>
    <fields>
        <fullName>Action_Points__c</fullName>
        <label>Action Points</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_the_lifts_and_escalators__c</fullName>
        <label>Are the lifts and escalators?</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non - Functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_there_emergency_lights__c</fullName>
        <label>Are there emergency lights?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments12__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_and_action_points__c</fullName>
        <label>Comments and action points:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_page_1__c</fullName>
        <label>Comments page 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_page_2__c</fullName>
        <label>Comments page 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_page_3__c</fullName>
        <label>Comments page 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exterior_steps__c</fullName>
        <label>Exterior steps, stairs and ramps</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_there_is_a_microwave_on_site_is_it__c</fullName>
        <label>If there is a microwave on site is it</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_is_it_up_to_date_and_relevant__c</fullName>
        <label>If yes is it up to date and relevant?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_is_the_cooker__c</fullName>
        <label>If yes is the cooker</label>
        <picklist>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_is_there_a_cooker_on_site__c</fullName>
        <label>If yes is there a cooker on site</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_food_prepared_on_the_premises__c</fullName>
        <label>Is food prepared on the premises?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_food_served_on_the_premises__c</fullName>
        <label>Is food served on the premises?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_it_easily_accessible__c</fullName>
        <label>Is it easily accessible?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_brand_visible_and_appropriate__c</fullName>
        <label>Is the brand visible and appropriate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_fire_alarm_monitored__c</fullName>
        <label>Is the fire alarm monitored?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_fire_signage_illuminated__c</fullName>
        <label>Is the fire signage illuminated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_a_HVAC_system__c</fullName>
        <label>Is there a HVAC system?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_a_fire_alarm__c</fullName>
        <label>Is there a fire alarm?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_a_food_preparation_facilities__c</fullName>
        <label>Food preparation facilities on site</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_directional_fire_signage__c</fullName>
        <label>Is there directional fire signage?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_checked__c</fullName>
        <label>Is this checked?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_recorded__c</fullName>
        <label>Is this recorded?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Site Surveys</relationshipLabel>
        <relationshipName>Site_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Overall_building_rating__c</fullName>
        <label>Overall building rating</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_condition__c</fullName>
        <label>Overall condition</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non - functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_condition_of_Exterior_door_unit__c</fullName>
        <label>Overall condition of Exterior door unit</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premises_Name__c</fullName>
        <label>Premises Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Smoke_detection__c</fullName>
        <label>Smoke detection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Urgent_Action_Required__c</fullName>
        <label>Urgent Action Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Urgent_Action_Required_tick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Action Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_condition__c</fullName>
        <label>What condition?</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non - Functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_of_Original_Building__c</fullName>
        <label>Year of Original Building</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>a_ACM__c</fullName>
        <label>ACMs in premises?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Asbestos_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>a_Asbestos_management_plan__c</fullName>
        <label>Asbestos management plan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Asbestos_report_received__c</fullName>
        <label>Asbestos report received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_CDM_regs__c</fullName>
        <label>CDM regs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_CDM_regs_compliant__c</fullName>
        <label>CDM regs compliant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>a_Exit_Alarm__c</fullName>
        <label>Monitored Alarm System?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Exit_Condition__c</fullName>
        <label>Condition of Emergency/Exit Lighting</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_FireSuppression_Condition__c</fullName>
        <label>Condition of Fire Suppression Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_Adequate_Safety_Features__c</fullName>
        <label>Adequate Fire Safety Features</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_Alarm_Condition__c</fullName>
        <label>Condition of Fire Alarms</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_Condition_of_Fire_Escapes__c</fullName>
        <label>Condition of Fire Escapes</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-functioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_Extinguishers__c</fullName>
        <label>Fire Extinguishers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_Has_Escapes__c</fullName>
        <label>Has Fire Escapes?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_How_Often_Tested__c</fullName>
        <label>How Often Fire Alarms Tested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_Fire_Last_Assessment__c</fullName>
        <label>Last Fire Risk Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Fire_Log__c</fullName>
        <label>Is there a fire record/log?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_Maintenance_Contract__c</fullName>
        <label>Fire Maintenance Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reffered to landlord</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>a_Fire_When_Last_Checked__c</fullName>
        <label>When Last Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Insurance_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>